# ASAP

./: CMakeLists.txt
executables/: CMakeLists.txt
executables/Camelyon/: CMakeLists.txt  Camelyon.cpp  FeatureConstructor.cpp  FeatureConstructor.h  FeatureSelector.h  FeatureStrategy.h  LBPFeatureStrategy.cpp  LBPFeatureStrategy.h  ModelTester.cpp  ModelTester.h  ModelTrainer.cpp  ModelTrainer.h  Segment.cpp  Segment.h  Slide.cpp  Slide.h  SlideLoader.cpp  SlideLoader.h  TestResults.cpp  TestResults.h
